Fix documentation navigation menu on mobile phones and collapsed windows and other edits (#346)
* fix navigation menu on mobile phone and collapsed windows

* remove unnecessary navbar items

* remove non-existent references

* minor CSS fix

--- a/docsrc/source/_static/theme_override.css
+++ b/docsrc/source/_static/theme_override.css
@@ -9373,6 +9373,7 @@ font-weight: 600;
 color: var(--main-color);
 background-color: transparent;
 border-left: 2px solid var(--main-color);
+border-radius: 0px;
 }
 .toc-h2 {
 font-size:.85rem
